--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,31 @@
-#   Ignore saves directory
-saves
-*.save
+# Created by https://www.toptal.com/developers/gitignore/api/renpy
+# Edit at https://www.toptal.com/developers/gitignore?templates=renpy
 
-#   Ignore all txt files
-*.txt
+### Renpy ###
+# Don't track content of these folders #
+########################################
+cache/
+saves/
+
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+*.rpyc
+*.rpymc
+
+
+# The log file and other misc things #
+######################################
 log.txt
-game/saves/
-game/cache/
 errors.txt
-log.txt
+traceback.txt
+files.txt
+
+# End of https://www.toptal.com/developers/gitignore/api/renpy
